if contrast first argument does not match, pass it through. Fixes #1090

--- a/test/less/functions.less
+++ b/test/less/functions.less
@@ -28,6 +28,7 @@
   luma-yellow: luma(#ffff00);
   luma-cyan: luma(#00ffff);
   luma-white-alpha: luma(rgba(255,255,255,0.5));
+  contrast-filter: contrast(30%);
   contrast-white: contrast(#fff);
   contrast-black: contrast(#000);
   contrast-red: contrast(#ff0000);
